argocd/argocd-ingressroute-websecure.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/argocd`)
      priority: 10
      services:
      - name: argocd-server
        port: 443
    - kind: Rule
      match: PathPrefix(`/argocd`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
